--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
     <h2>Choose Grid Size</h2>
     <form id="sizePicker">
-        Grid Height:
-        <input type="number" id="inputHeight" name="height" min="1" value="1">
-        Grid Width:
-        <input type="number" id="inputWidth" name="width" min="1" value="1">
+        <label for=“inputHeight”>Grid Height:</label>
+        <input type="number" id="inputHeight" name="height" min="1" max="20" value="1">
+        <label for=“inputWidth”>Grid Widtht:</label>
+        <input type="number" id="inputWidth" name="width" min="1" max="20" value="1">
         <input type="submit">
     </form>
 
