--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <form id="sizePicker">
         <label for=“inputHeight”>Grid Height:</label>
         <input type="number" id="inputHeight" name="height" min="1" max="20" value="1">
-        <label for=“inputWidth”>Grid Widtht:</label>
+        <label for=“inputWidth”>Grid Width:</label>
         <input type="number" id="inputWidth" name="width" min="1" max="20" value="1">
         <input type="submit">
     </form>
